{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 42,
  "lineage": "58c80db1-762b-761f-1507-090f88463c9d",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-09-06T11:43:47.664-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/dev-project-361620/global/firewalls/myfirewall",
            "log_config": [],
            "name": "myfirewall",
            "network": "https://www.googleapis.com/compute/v1/projects/dev-project-361620/global/networks/my-vpc",
            "priority": 1000,
            "project": "dev-project-361620",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dev-project-361620/global/firewalls/myfirewall",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "web"
            ],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "my_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20220822",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/dev-project-361620/zones/us-central1-a/disks/project"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/dev-project-361620/zones/us-central1-a/instances/project",
            "instance_id": "6389939998417365534",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "yb_I0sK0go0=",
            "name": "project",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.135.128.91",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/dev-project-361620/global/networks/my-vpc",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/dev-project-361620/regions/us-central1/subnetworks/my-subnet",
                "subnetwork_project": "dev-project-361620"
              }
            ],
            "project": "dev-project-361620",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "scratch_disk": [
              {
                "interface": "SCSI"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/dev-project-361620/zones/us-central1-a/instances/project",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "bar",
              "foo"
            ],
            "tags_fingerprint": "1gqCRgrww4E=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.myvpc",
            "google_compute_subnetwork.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/dev-project-361620/global/networks/my-vpc",
            "mtu": 0,
            "name": "my-vpc",
            "project": "dev-project-361620",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dev-project-361620/global/networks/my-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-09-06T11:43:48.047-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/dev-project-361620/regions/us-central1/subnetworks/my-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "my-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/dev-project-361620/global/networks/my-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "dev-project-361620",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dev-project-361620/regions/us-central1/subnetworks/my-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/example",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "example",
                "namespace": "default",
                "resource_version": "23159",
                "uid": "98ff6abc-e30f-4115-affe-b652221edfbf"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "wordpress",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "wordress",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 80
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/*",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_client_config.provider",
            "google_compute_network.myvpc",
            "google_compute_subnetwork.network",
            "google_container_cluster.primary",
            "kubernetes_service.lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/wordress",
            "metadata": [
              {
                "generation": 0,
                "name": "wordress",
                "namespace": "default",
                "resource_version": "1808",
                "uid": "ecbdac72-eb37-4fd1-91c6-b43faf233817"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.147.251.64",
                "cluster_ips": [
                  "10.147.251.64"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 31754,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "App": "frontend"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "ip": "34.136.193.191"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "data.google_client_config.provider",
            "google_compute_network.myvpc",
            "google_compute_subnetwork.network",
            "google_container_cluster.primary"
          ]
        }
      ]
    }
  ]
}